replace fill to stretch, because spec has changed: resolved

--- a/src/views/Layout/Layout.css
+++ b/src/views/Layout/Layout.css
@@ -9,7 +9,7 @@
 }
 
 main {
-  height: fill;
+  height: stretch;
 }
 
 header {
